--- a/app/src/main/res/layout/medic_list_item.xml
+++ b/app/src/main/res/layout/medic_list_item.xml
@@ -41,6 +41,16 @@
             android:text="Line 2"
             android:textSize="15sp" />
 
+        <ImageView
+            android:id="@+id/image_favorite"
+            android:layout_width="60dp"
+            android:layout_height="80dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="9dp"
+            android:layout_marginEnd="3dp"
+            app:srcCompat="@drawable/ic_favorite_blank" />
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
