--- a/app/src/main/res/layout/medic_list_item.xml
+++ b/app/src/main/res/layout/medic_list_item.xml
@@ -15,40 +15,57 @@
             android:id="@+id/imageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="8dp"
             android:padding="2dp" />
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:layout_width="188dp"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="19dp"
-            android:layout_toEndOf="@+id/imageView"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="6dp"
+            android:layout_toStartOf="@+id/imageView"
             android:text="Line 1"
+            android:textAlignment="textEnd"
             android:textColor="@android:color/black"
             android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:layout_width="165dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="8dp"
-            android:layout_toEndOf="@+id/imageView"
+            android:layout_marginTop="19dp"
+            android:layout_marginEnd="9dp"
+            android:layout_toStartOf="@+id/imageView"
             android:text="Line 2"
+            android:textAlignment="textEnd"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="165dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textView"
+            android:layout_marginTop="41dp"
+            android:layout_marginEnd="8dp"
+            android:layout_toStartOf="@+id/imageView"
+            android:text="Line 2"
+            android:textAlignment="textEnd"
             android:textSize="15sp" />
 
         <ImageView
             android:id="@+id/image_favorite"
             android:layout_width="60dp"
             android:layout_height="80dp"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="9dp"
-            android:layout_marginEnd="3dp"
+            android:layout_marginStart="9dp"
+            android:layout_marginTop="13dp"
             app:srcCompat="@drawable/ic_favorite_blank" />
 
     </RelativeLayout>
