--- a/app/src/main/res/layout/activity_doctorclient.xml
+++ b/app/src/main/res/layout/activity_doctorclient.xml
@@ -7,12 +7,13 @@
 
     <ImageView
         android:id="@+id/imageView11"
-        android:layout_width="166dp"
-        android:layout_height="126dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="44dp"
+        android:adjustViewBounds="true"
         app:layout_constraintBottom_toTopOf="@+id/imageView9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -24,8 +25,9 @@
     <ImageView
         android:id="@+id/imageView12"
         android:layout_width="wrap_content"
-        android:layout_height="65dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:adjustViewBounds="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,8 +37,9 @@
     <ImageView
         android:id="@+id/imageView9"
         android:layout_width="wrap_content"
-        android:layout_height="221dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="8dp"
+        android:adjustViewBounds="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -45,12 +48,13 @@
 
     <ImageView
         android:id="@+id/imageView15"
-        android:layout_width="166dp"
-        android:layout_height="128dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="44dp"
+        android:adjustViewBounds="true"
         app:layout_constraintBottom_toTopOf="@+id/imageView12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,21 +63,26 @@
 
     <ImageView
         android:id="@+id/imageView3"
+        android:scaleType="fitCenter"
         android:layout_width="wrap_content"
-        android:layout_height="67dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:adjustViewBounds="true"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_docorclient_top_panel" />
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="85dp"
-        android:layout_height="58dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="27dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="96dp"
+        android:adjustViewBounds="true"
         app:layout_constraintBottom_toTopOf="@+id/imageView12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
@@ -84,12 +93,13 @@
 
     <ImageView
         android:id="@+id/imageView5"
-        android:layout_width="85dp"
-        android:layout_height="56dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="112dp"
+        android:adjustViewBounds="true"
         app:layout_constraintBottom_toTopOf="@+id/imageView9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView11"
