--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -64,6 +64,7 @@
             android:autofillHints=""
             android:ellipsize="start"
             android:ems="10"
+            android:fontFamily="@font/montserrat"
             android:gravity="start"
             android:hint="E-mail"
             android:inputType="textEmailAddress"
@@ -95,6 +96,7 @@
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp"
             android:ems="10"
+            android:fontFamily="@font/montserrat"
             android:gravity="start"
             android:hint="Password"
             android:inputType="textPassword"
@@ -111,6 +113,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:text="@string/sing_in"
         android:textColor="#FFFFFF"
@@ -125,6 +128,7 @@
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:layout_marginBottom="16dp"
+        android:fontFamily="@font/montserrat"
         android:text="@string/forgot_password"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/middle_panel"
@@ -167,6 +171,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:fontFamily="@font/montserrat"
         android:gravity="center"
         android:text="@string/create_account"
         android:textColor="@color/white"
